CHANGES
=======

v0.1.8
------

* [release] 0.1.8

v0.1.7
------

* [release] 0.1.7

v0.1.6
------

* [release] 0.1.6

v0.1.5
------

* [release] 0.1.5
* refactor(pycman.cli): 新增了几个指令

v0.1.2
------

* docs(ChangeLog): update changelog
* docs(README.rst): rewrite README.rst
* docs(README.rst): fixed rst format error
* docs(README): 补充了README文档
* docs(changelog): release [v0.1.1]

v0.1.1
------

* build(package.py): removed version, changed commit script
* docs(ChangeLog): update changelog
* refactor: 移除无关代码
* refactor: 试试新的commitzen工具

v0.1.0
------

* fixed: pbr cfg
* feat: add build cmd

v0.0.3
------

* fixed: textwrap
* fixed: git dir error

v0.0.2
------

* fixed: FileNotFound Error
* Refactor(builder): added builder module
* added initial.py
* added: xmind
* init