@@ -1,7 +1,9 @@
-from pycman.builder.BaseBuilder import Director
 import importlib
-import sys
 import os
+import sys
+
+from pycman.builder.BaseBuilder import BaseBuilder, Director, InitError
+from pycman.builder import utils
 
 sys.path.append(os.path.dirname(os.path.abspath(__file__)))
 
@@ -37,5 +39,9 @@ def build(name='GeneralBuilder'):
 
 
 __all__ = [
-    'build'
+    'build',
+    'BaseBuilder',
+    'Director',
+    'InitError',
+    'utils'
 ]
