@@ -17,4 +17,4 @@ packages =
 
 [entry_points]
 console_scripts =
-    pyc=pycman.cli:main
+    pyc = pycman.utils.cli:entry_point
