@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+* docs(ChangeLog): update [0.1.8]
+
 v0.1.8
 ------
 
